<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentTrabalho"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrabalhoFragment">

    <TextView
        android:id="@+id/tvTituloTrabalho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/trabalho"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDescricaoTrabalho"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/descricao"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/cinza_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIdTrabalho" />

    <EditText
        android:id="@+id/etNotaTrabalho"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/nota"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/cinza_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etPesoTrabalho"
        app:layout_constraintTop_toBottomOf="@+id/etDataTrabalho" />

    <EditText
        android:id="@+id/etPesoTrabalho"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/peso"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textColorHint="@color/cinza_hint"
        app:layout_constraintEnd_toStartOf="@+id/etNotaTrabalho"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataTrabalho" />

    <EditText
        android:id="@+id/etDataTrabalho"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/data"
        android:importantForAutofill="no"
        android:inputType="datetime|date"
        android:textColorHint="@color/cinza_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescricaoTrabalho" />

    <EditText
        android:id="@+id/etIdTrabalho"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/id"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/cinza_hint"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarTrabalho"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloTrabalho" />

    <Button
        android:id="@+id/btnBuscarTrabalho"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etIdTrabalho"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloTrabalho" />

    <Button
        android:id="@+id/btnModificarTrabalho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnInserirTrabalho" />

    <Button
        android:id="@+id/btnListarTrabalho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/listar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarTrabalho" />

    <Button
        android:id="@+id/btnExcluirTrabalho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/excluir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirTrabalho" />

    <Button
        android:id="@+id/btnInserirTrabalho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/inserir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvObrigatorio" />

    <TextView
        android:id="@+id/tvObrigatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/obrigatorio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spDisciplinaTrabalho" />

    <TextView
        android:id="@+id/tvListaTrabalho"
        android:layout_width="398dp"
        android:layout_height="111dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExcluirTrabalho" />

    <Spinner
        android:id="@+id/spDisciplinaTrabalho"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumIntegrantesTrabalho" />

    <EditText
        android:id="@+id/etNumIntegrantesTrabalho"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/num_integrantes"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/cinza_hint"
        app:layout_constraintEnd_toStartOf="@+id/cbApresentacao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPesoTrabalho" />

    <CheckBox
        android:id="@+id/cbApresentacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/apresentacao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etNumIntegrantesTrabalho"
        app:layout_constraintTop_toBottomOf="@+id/etNotaTrabalho" />

</androidx.constraintlayout.widget.ConstraintLayout>