<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentDisciplina"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisciplinaFragment">

    <TextView
        android:id="@+id/tvTituloDisciplina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp"
        android:text="@string/disciplina"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBuscarDisciplina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNomeDisciplina"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/disciplina_nome"
        android:inputType="text"
        android:textColorHint="@color/cinza_hint"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="@+id/btnBuscarDisciplina"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarDisciplina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBuscarDisciplina" />

    <EditText
        android:id="@+id/etProfessorDisciplina"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/professor"
        android:inputType="text"
        android:textColorHint="@color/cinza_hint"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeDisciplina" />

    <Button
        android:id="@+id/btnBuscarDisciplina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="202dp"
        android:text="@string/buscar"
        app:layout_constraintBottom_toTopOf="@+id/tvListaDisciplinas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloDisciplina" />

    <Button
        android:id="@+id/btnInserirDisciplina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:text="@string/inserir"
        app:layout_constraintEnd_toStartOf="@+id/btnModificarDisciplina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etProfessorDisciplina" />

    <Button
        android:id="@+id/btnListarDisciplina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/listar_disciplinas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarDisciplina" />

    <Button
        android:id="@+id/btnModificarDisciplina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:text="@string/modificar"
        app:layout_constraintEnd_toStartOf="@+id/btnExcluirDisciplina"
        app:layout_constraintStart_toEndOf="@+id/btnInserirDisciplina"
        app:layout_constraintTop_toBottomOf="@+id/etProfessorDisciplina" />

    <Button
        android:id="@+id/btnExcluirDisciplina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:text="@string/excluir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnModificarDisciplina"
        app:layout_constraintTop_toBottomOf="@+id/etProfessorDisciplina" />

    <TextView
        android:id="@+id/tvListaDisciplinas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="7dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscarDisciplina" />
</androidx.constraintlayout.widget.ConstraintLayout>